--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 """
-Nome do Arquivo: RELATÓRIO DE ESTÁGIO
+Nome do Arquivo: RELATÓRIO DE ESTÁGIO FEELT
 Autor: Samuel de Oliveira Lino
 Data de Criação: 08/05/2025
 Versão: 1.0.0
